fix(popover): vertical alignment on rb-icon showcase page
Also add some css vertical alignment utility classes

--- a/src/client/styles/utilities/utils.scss
+++ b/src/client/styles/utilities/utils.scss
@@ -32,3 +32,18 @@
 .text-right {
 	text-align: right !important;
 }
+
+/* Vertical Align
+ *****************/
+.valign-baseline {
+	vertical-align: baseline !important;
+}
+.valign-bottom {
+	vertical-align: bottom !important;
+}
+.valign-middle {
+	vertical-align: middle !important;
+}
+.valign-top {
+	vertical-align: top !important;
+}
